<resources>
    <string name="app_name">Convert</string>
    <string name="convert">Convert</string>
    <string name="switcher">Switch</string>
    <string name="round">Round</string>

    <string name="teaspoon">Teaspoon</string>
    <string name="tablespoon">Tablespoon</string>
    <string name="cup">Cup</string>
    <string name="pint">Pint</string>
    <string name="fluid_ounce">Fluid ounce</string>

</resources>